--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,20 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.geekhua</groupId>
+	<groupId>team.balam</groupId>
 	<artifactId>file-queue</artifactId>
-	<version>0.1.5</version>
+	<version>1.0.0</version>
 	<name>FileQueue</name>
-	<url>https://github.com/leoliang/FileQueue</url>
+	<!-- <url>https://github.com/leoliang/FileQueue</url> -->
 	<packaging>jar</packaging>
+	
+	<properties>
+		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+	</properties>
+	
 	<developers>
 		<developer>
-			<name>Leo Liang</name>
-			<url>http://www.geekhua.com</url>
-			<timezone>8</timezone>
+			<name>nero</name>
 		</developer>
 	</developers>
 
@@ -36,8 +39,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.7</source>
+					<target>1.7</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -77,28 +80,5 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.4</version>
 		</dependency>
-		<dependency>
-			<groupId>com.esotericsoftware.kryo</groupId>
-			<artifactId>kryo</artifactId>
-			<version>2.20</version>
-		</dependency>
 	</dependencies>
-	<distributionManagement>
-		<repository>
-			<id>dianping.repo</id>
-			<name>internal corporate repository</name>
-			<url>http://mvn.dianpingoa.com/dianping-releases
-            </url>
-		</repository>
-		<snapshotRepository>
-			<id>dianping.repo.snapshots</id>
-			<name>internal corporate snapshots repository</name>
-			<url>http://mvn.dianpingoa.com/dianping-snapshots
-            </url>
-		</snapshotRepository>
-	</distributionManagement>
-	<properties>
-		<project.build.sourceEncoding>utf-8
-		</project.build.sourceEncoding>
-	</properties>
 </project>
