--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
 	<artifactId>file-queue</artifactId>
 	<version>1.0.0</version>
 	<name>FileQueue</name>
-	<!-- <url>https://github.com/leoliang/FileQueue</url> -->
 	<packaging>jar</packaging>
 	
 	<properties>
@@ -42,6 +41,13 @@
                     <source>1.7</source>
                     <target>1.7</target>
 					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.1</version>
+				<configuration>
+					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/../../repository/maven</altDeploymentRepository>
 				</configuration>
 			</plugin>
 		</plugins>
